[package]
name = "timezoner"
description = "a discord bot that makes timezone conversions really easy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sparkle-convenience = "0.14"
twilight-http = "0.14"
twilight-gateway = "0.14"
twilight-model = "0.14"
twilight-standby = "0.14"
twilight-interactions = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.8"
lazy-regex = "2.3"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
dotenvy = "0.15"
anyhow = { version = "1.0", features = ["backtrace"] }