[package]
name = "timezoner"
description = "a discord bot to send times/dates that everyone sees in their own timezone"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
sparkle-convenience = "0.15"
twilight-http = "0.15"
twilight-gateway = "0.15"
twilight-model = "0.15"
twilight-standby = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }
twilight-interactions = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.8"
lazy-regex = "2.3"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.24", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
dotenvy = "0.15"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"